edit #home title

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
 
 <div id="section_wrap">
   <section id="home">
-    <h1 class="page_title">Junpei Yamashita Portfolio</h1>
-    <div class="wrap">
-      
-    </div>
+    <h1 class="page_title">Cacao Ame<span>Junpei Yamashita’s Portfolio</span></h1>
   </section>
   <section id="profile">
     <h1 class="page_title">profile</h1>
