--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 <script>
 var anchors = Array.from(document.querySelectorAll('a'));
 
-anchors.forEach(a => {
-  a.addEventListener('touchstart', () => {
+anchors.forEach(function (a){
+  a.addEventListener('touchstart', function () {
     a.classList.add('hover');
   });
-  a.addEventListener('touchend', () => {
+  a.addEventListener('touchend', function () {
     a.classList.remove('hover');
   });
 });
@@ -104,9 +104,9 @@ anchors.forEach(a => {
 
 var experience_ele = Array.from(document.querySelectorAll('.experience em'));
 
-const experienceYear = (startedYear, startedMonth) => {
+var experienceYear = function(startedYear, startedMonth) {
 
-  const startDate = new Date(startedYear, startedMonth - 1),
+  var startDate = new Date(startedYear, startedMonth - 1),
       now = new Date()
   ;
 
@@ -114,7 +114,7 @@ const experienceYear = (startedYear, startedMonth) => {
   return new Date(now - startDate).getFullYear() - 1970;
 }
 
-experience_ele.forEach(e => {
+experience_ele.forEach(function (e) {
   e.textContent = experienceYear(e.dataset.startYear >> 0, e.dataset.startMonth >> 0);
 });
 </script>
