--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 <script>
 var anchors = Array.from(document.querySelectorAll('a'));
 
-anchors.forEach(function (a){
-  a.addEventListener('touchstart', function () {
-    a.classList.add('hover');
-  }, false);
-  a.addEventListener('touchend', function () {
-    a.classList.remove('hover');
-  }, false);
-});
+// anchors.forEach(function (a){
+//   a.addEventListener('touchstart', function () {
+//     a.classList.add('hover');
+//   }, false);
+//   a.addEventListener('touchend', function () {
+//     a.classList.remove('hover');
+//   }, false);
+// });
 
 
 var experience_ele = Array.from(document.querySelectorAll('.experience em'));
