--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>Junpei Yamashita</p>
           </div>
           <div class="dob data">
-            <span>Date of Birth (MM/DD/YYYY)</span>
+            <span>Date of Birth</span>
             <p>02/15/1996</p>
           </div>
           <div class="address data">
@@ -57,8 +57,8 @@
     </div>
     <div id="activity" class="wrap">
       <h2>Activity</h2>
-      <a class="item" href="https://github.com/junya0215">Github - MyPage</a>
-      <a class="item" href="http://qiita.com/junya">Qiita - MyPage</a>
+      <a class="item" href="https://github.com/junya0215">Github</a>
+      <a class="item" href="http://qiita.com/junya">Qiita</a>
     </div> 
   </section>
   <section id="design">
