--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <body>
 <div id="container">
   
-<div id="go_home"    class="trigger" style="display: none;"></div>
-<div id="go_design"  class="trigger" style="display: none;"></div>
-<div id="go_tool"    class="trigger" style="display: none;"></div>
-<div id="go_profile" class="trigger" style="display: none;"></div>
+<div id="home"    class="trigger" style="display: none;"></div>
+<div id="design"  class="trigger" style="display: none;"></div>
+<div id="tool"    class="trigger" style="display: none;"></div>
+<div id="profile" class="trigger" style="display: none;"></div>
 
 <header>
   <nav>
-    <a href="#go_home"    class="link_home">home</a>
-    <a href="#go_profile" class="link_profile">Profile</a>
-    <a href="#go_design"  class="link_design">Design</a>
-    <a href="#go_tool"    class="link_tool">Tool</a>
+    <a href="#home"    class="link_home">home</a>
+    <a href="#profile" class="link_profile">Profile</a>
+    <a href="#design"  class="link_design">Design</a>
+    <a href="#tool"    class="link_tool">Tool</a>
   </nav>
 </header>
 
 <div id="section_wrap">
-  <section id="home">
+  <section id="section_home">
     <h1 class="page_title">Cacao Ame<span>Junpei Yamashita’s Portfolio</span></h1>
   </section>
-  <section id="profile">
+  <section id="section_profile">
     <h1 class="page_title">profile</h1>
     <div id="basic_info">
       <h2>Basic Information</h2>
@@ -61,7 +61,7 @@
       <a class="item" href="http://qiita.com/junya">Qiita</a>
     </div> 
   </section>
-  <section id="design">
+  <section id="section_design">
     <h1 class="page_title">Design</h1>
     <div id="art" class="wrap">
       <h2>Art</h2>
@@ -80,7 +80,7 @@
       <a href="design_ui/menuSlideAnimation/">Menu Slide Animation</a>
     </div>
   </section>
-  <section id="tool">
+  <section id="section_tool">
     <h1 class="page_title">Tool</h1>
     <div class="wrap">
       <a href="tool/randomColor/">RandomColor</a>
