--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <div id="UI" class="wrap">
       <h2>User Interface</h2>
       <a href="design_ui/menuSlideAnimation/">Menu Slide Animation</a>
+      <a href="design_ui/inputTextAnimation/">Input Text Animation</a>
     </div>
   </section>
   <section id="section_tool">
