--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       <h2>User Interface</h2>
       <a href="design_ui/menuSlideAnimation/">Menu Slide Animation</a>
       <a href="design_ui/inputTextAnimation/">Input Text Animation</a>
+      <a href="design_ui/flex_cat/">Flex Cat</a>
     </div>
   </section>
   <section id="section_tool">
