--- a/design_ui/block_cat/index.html
+++ b/design_ui/block_cat/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="index.css">
-  <title>Flex Cat</title>
+  <title>Block Cat</title>
 </head>
 <body ontouchstart="">
 
-<div class="flex">
-  <a class="item" href="#">link item</a>
-  <a class="item" href="#">link item</a>
+<div class="block">
+  <a class="item" href="#">item content</a>
+  <a class="item" href="#">item content</a>
 </div>
 
 </body>
