--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <a href="design_ui/menuSlideAnimation/">Menu Slide Animation</a>
       <a href="design_ui/inputTextAnimation/">Input Text Animation</a>
       <a href="design_ui/flex_cat/">Flex Cat</a>
+      <a href="design_ui/block_cat/">Block Cat</a>
     </div>
   </section>
   <section id="section_tool">
